name-metrics-api/k8s/monitoring/grafana-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.local`)
      kind: Rule
      services:
        - name: monitoring-grafana
          port: 80
  tls:
    secretName: grafana-local-tls   # сертификат как у news.local
